SERVER-59413 Make sure tenant_migration_fetch_committed_transactions_retry.js will only process one txn entry before simulating donor failure